@@ -1,5 +1,8 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
+2015-06-26 bertazza
+  * Raster styles: some bugs fixed.
+
 2015-06-25 Giuseppe Aruta <giuseppe_aruta@yahoo.it>
   * Reorganized Select Item context menu: move some plugins to a new "Other tools" submenu
   * Add Measure Selected Features plugin to Select Items context menu>Other tools submenu
